# audio-wave

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/actions/run-clang-format/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/scripts/: Build-Windows.ps1  Package-Windows.ps1
.github/workflows/: build-project.yaml
build-aux/: run-gersemi
data/effects/: cartoon-frame.effect  equalizer-grid.effect  equalizer-grid.effect.ini  liquid-blobs.effect  liquid-blobs.effect.ini  neon-lines.effect  neon-lines.effect.ini  pulse-ring.effect  pulse-ring.effect.ini  radial-spikes.effect  radial-spikes.effect.ini  reactive-camera-frame.effect  reactive-camera-frame.effect.ini  rounded-wobble-bars.effect  rounded-wobble-bars.effect.ini  spectrum-bars.effect  spectrum-bars.effect.ini  starfield-burst.effect  starfield-burst.effect.ini  storm-lightning.effect  storm-lightning.effect.ini  tunnel-waves.effect  tunnel-waves.effect.ini  vortex-rings.effect  vortex-rings.effect.ini  waveform-ribbon.effect  waveform-ribbon.effect.ini
docs/: index.html
docs/assets/css/: style.css
docs/assets/js/: main.js
installer/: audio-wave-installer.nsi
src/: audio-shader-source.cpp  audio-wave-render.cpp  audio-wave.cpp  audiowave-themes.cpp  plugin-main.cpp
src/includes/: audio-shader-source.hpp  audio-wave.hpp  audiowave-themes.hpp  config.hpp  config.hpp.in
src/themes/: theme-abstract.cpp  theme-abstract.hpp  theme-cartoonframe.cpp  theme-cartoonframe.hpp  theme-circle.cpp  theme-circle.hpp  theme-cosmic.cpp  theme-cosmic.hpp  theme-doughnut.cpp  theme-doughnut.hpp  theme-fluid.cpp  theme-fluid.hpp  theme-fluidblob.cpp  theme-fluidblob.hpp  theme-hex.cpp  theme-hex.hpp  theme-lightning.cpp  theme-lightning.hpp  theme-line.cpp  theme-line.hpp  theme-magicsquare.cpp  theme-magicsquare.hpp  theme-musicmagic.cpp  theme-musicmagic.hpp  theme-pulse.cpp  theme-pulse.hpp  theme-rounded-bars.cpp  theme-rounded-bars.hpp  theme-square.cpp  theme-square.hpp  theme-stacked-columns.cpp  theme-stacked-columns.hpp  theme-star.cpp  theme-star.hpp
